<resources>
    <string name="projectName">saas</string>
    <string name="app_name">一芯资产管理</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mtpostion_tag">MTPostionTagActivity</string>
    <string name="login">登录</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松手刷新</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="title_activity_uninv_list">UninvListActivity</string>
    <string name="double_click_exit_tint">Press the back button again to exit the GeeksAndroid</string>
    <string name="http_error">网络通讯失败！</string>
    <string name="token_error">登录失效,请重新登录!</string>
    <string name="offline_login_error">离线登录失效,账号或者密码错误!</string>
    <string name="unKnown_error">未知错误！</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="load_data_fail">获取数据失败</string>
    <string name="upload_data_fail">提交数据失败</string>
    <string name="search_data_fail">查询数据失败</string>
    <string name="uer_name">用户名</string>
    <string name="user_passward">密码</string>
    <string name="data_updated">数据已经更新！</string>
    <string name="search_card">寻卡</string>
    <string name="search_stop">暂停</string>
    <string name="clear_card">清除</string>
    <string name="write_epc">写入</string>
    <string name="tv_write_epc">写卡</string>
    <string name="epc_context">内容：</string>
    <string name="write_epc_hint">请写入24位16进制数</string>
    <string name="cancel_opt">取消</string>
    <string name="sure_opt">确定</string>
    <string name="old_epc_data">原始数据</string>
    <string name="old_data">旧数据:</string>
    <string name="new_data">新数据:</string>
    <string name="error_epc_write">写入的ecp数据不能为空</string>
    <string name="error_epc_length">请输入24位16进制数</string>
    <string name="write_epc_sucess">写入成功</string>
    <string name="write_epc_fail">写入失败，请将手持机靠近标签重试!</string>
    <string name="connect_rfid">开始连接</string>
    <string name="disconnect_rfid">断开连接</string>
    <string name="not_connect_prompt">RFID异常，请重新进入应用连接！</string>
    <string name="socket_time_out_error">网络连接超时，请检查输入的服务器URL是否正确!</string>
    <string name="url_error">请检查输入的服务器URL是否正确!</string>
    <string name="not_get_data">未查询到相关数据！</string>
    <string name="not_get_epc">没有扫到任何标签，请重试！</string>
    <string name="requisition_name">领用单号：</string>
    <string name="requisition_user">领用人：</string>
    <string name="requisition_creator">创建人：</string>
    <string name="requisition_create_time">领用时间：</string>
    <string name="request_assets">领用备注：</string>
    <string name="start_scan">扫描</string>
    <string name="inprogress">处理中</string>
    <string name="asset_id">资产编号</string>
    <string name="query_asset">查询</string>
    <string name="asset_detail">详情</string>
    <string name="input_write_asset_id">请输入正确的资产编码</string>
    <string name="asset_details">已领用详情:</string>
    <string name="search_asset_details">查询详情:</string>
    <string name="not_result_error">未获取到数据！</string>
    <string name="not_company_info">未获取到公司信息！</string>
    <string name="not_find_asset">未查询到相关资产数据！</string>
    <string name="has_used_assets">已领用资产:无信息</string>
    <string name="error_page_text">未知错误，请重试！</string>
    <string name="empty_page_text">没有数据</string>
    <string name="submit_data">提交</string>
    <string name="not_select_asset">未选中任何领用资产！</string>
    <string name="sub_req_asset_suc">提交领用资产成功！</string>
    <string name="sub_req_asset_fail">提交领用资产失败：</string>
    <string name="scann_start">开启</string>
    <string name="scann_stop">停止</string>
    <string name="start_inv">开始盘点</string>
    <string name="stop_inv">停止盘点</string>
    <string name="inv_upload_data">数据上传</string>
    <string name="home_title">首页</string>
    <string name="navigation_drawer_open">打开侧栏</string>
    <string name="navigation_drawer_close">关闭侧栏</string>
    <string name="update_message">更新服务正在运行</string>
    <string name="inv_filter_str">盘存过滤：</string>
    <string name="save">保存</string>
    <string name="tag_epc">标签EPC：</string>
    <string name="data_type">16位16进制数</string>
    <string name="set_status">设置</string>
    <string name="fileter_clear_str">清除</string>
    <string name="start_search">开始查找</string>
    <string name="stop_search">停止查找</string>
    <string name="current_search_tag">当前识别标签</string>
    <string name="filter_data_null">过滤数据不能为空！</string>
    <string name="filter_sucess">过滤成功</string>
    <string name="filter_failed">过滤失败</string>
    <string name="clear_sucess">清除成功</string>
    <string name="clear_failed">清除失败</string>
    <string name="ast_name">资产名称</string>
    <string name="no_info">无信息</string>
    <string name="ast_code">资产编号：</string>
    <string name="expiration_reminder">您的系统已过期，请购买后再使用！</string>
    <string name="wrong_account_or_pass">账户或密码不正确！</string>
    <string name="no_asset_in_new_inv">新建盘点单中无符合条件资产！</string>
    <string name="assets_title">请输入资产名称、资产编号</string>
    <string name="assets_id">设备编码</string>
    <string name="assets_name">资产描述</string>
    <string name="assets_type">资产分类</string>
    <string name="brand">品\u3000\u3000牌</string>
    <string name="assets_status">资产状态</string>
    <string name="rule_model">规格型号</string>
    <string name="measuring_unit">计量单位</string>
    <string name="SN">SN号</string>
    <string name="ast_material">资产材质</string>
    <string name="belong_company">所属单位</string>
    <string name="model">型\u3000\u3000号</string>
    <string name="store_location">存放位置</string>
    <string name="manager">管理员</string>
    <string name="source">来源</string>
    <string name="buy_date">购入日期</string>
    <string name="count">金额</string>
    <string name="expiration_use_months">预使用月数</string>
    <string name="use_company">使用公司</string>
    <string name="use_department">使用部门</string>
    <string name="user">资产保管人</string>
    <string name="requisition_date">领用日期</string>
    <string name="remark">备注</string>
    <string name="warranty_info">维保信息</string>
    <string name="supplier">供应商</string>
    <string name="contacts">联系人</string>
    <string name="contact_information">联系方式</string>
    <string name="maintenance_expiration">维保到期</string>
    <string name="maintenance_instructions">维保说明</string>
    <string name="location_search">定位查找</string>
    <string name="tag_write">写入标签</string>
    <string name="base_info">基本信息</string>
    <string name="login_hint">手机/邮箱/用户名</string>
    <string name="access_address">更改访问配置</string>
    <string name="welcom_user">欢迎您,管理员</string>
    <string name="welcom">欢迎您, </string>
    <string name="company_name">一芯智能</string>
    <string name="all_assets">总资产</string>
    <string name="assets_inuse">在用资产</string>
    <string name="assets_free">闲置资产</string>
    <string name="assets_manager">资产管理</string>
    <string name="inv_task">盘点任务</string>
    <string name="ast_inv">资产盘点</string>
    <string name="ast_search">资产查找</string>
    <string name="write_tag">标签写入</string>
    <string name="assets_location">资产分布情况（按存放地点）</string>
    <string name="confirm_write">确认写入</string>
    <string name="new_inv_name">盘点单名称</string>
    <string name="exp_finish_date">结束时间</string>
    <string name="exp_start_date">开始时间</string>
    <string name="inv_name_hint">请输入盘点单名称</string>
    <string name="new_inv_persion">盘点人</string>
    <string name="inv_persion_hint">请选择盘点人</string>
    <string name="inv_finish_hint">请选择结束时间</string>
    <string name="inv_start_hint">请选择开始时间</string>
    <string name="start_end_time_error">开始时间不能大于结束时间</string>
    <string name="inv_range">盘点范围</string>
    <string name="inv_remind_hint">注意：不选范围默认为有权限的全部资产</string>
    <string name="new_inv_submit">保存</string>
    <string name="inv_own_comp_hint">请选择所属公司</string>
    <string name="inv_owncom">所属公司</string>
    <string name="inv_loc_hint">请选择存放位置</string>
    <string name="inv_location">存放位置</string>
    <string name="inv_asstype_hint">请选择资产分类</string>
    <string name="inv_asstype">资产分类</string>
    <string name="inv_usedepart_hint">请选择使用部门</string>
    <string name="inv_usedepart">部门</string>
    <string name="inv_usecom_hint">请选择使用公司</string>
    <string name="inv_usecom">使用公司</string>
    <string name="new_inv_task">新建盘点任务</string>
    <string name="sound_setting_fail">手持机声音设置失败，请检查连接退出重试！</string>
    <string name="save_newinv_succ">设置成功</string>
    <string name="save_newinv_fail">设置失败</string>
    <string name="version_name">当前版本</string>
    <string name="version_num">v1.1.0</string>
    <string name="login_out">退出登录</string>
    <string name="setting_title">设置</string>
    <string name="identify_tips">扣动扳机 识别标签</string>
    <string name="identify_success">识别完成</string>
    <string name="identify_tags">一次只能写入一个标签</string>
    <string name="write_tips">请将待写入标签贴近手持机前端</string>
    <string name="write_attention">注意：标签写入时，请尽量远离其他标签，避免其他标签干扰</string>
    <string name="no_message">暂无信息</string>
    <string name="search_assets_tips">你可以输入资产信息查找资产，也可通过手持机来查找附近的资产</string>
    <string name="not_submit">未提交</string>
    <string name="invorder_name">盘点单名称</string>
    <string name="invorder_code">盘点单号</string>
    <string name="inv_creator">创\u0020\u0020建\u0020\u0020人</string>
    <string name="sync_data">同步数据</string>
    <string name="finish_inv">完成盘点</string>
    <string name="asset_inventoried">已盘点</string>
    <string name="asset_not_inventoried">未盘点</string>
    <string name="inv_create_date">创建日期</string>
    <string name="inv_expect_finish_date">预计完成日期</string>
    <string name="inv_finish_date">完成日期</string>
    <string name="inv_all_num">盘点总数</string>
    <string name="ast_inved">已盘</string>
    <string name="ast_not_inved">未盘</string>
    <string name="ast_not_submit">未提</string>
    <string name="inv_detail">盘点单详情</string>
    <string name="prompt_title">提示</string>
    <string name="finish_prop_content">您还有数据未盘点，是否确认要终止该盘点任务？</string>
    <string name="location_tips">距 离 越 大，距 离 资 产 越 近</string>
    <string name="assets_details">资产详情</string>
    <string name="update_now">立即更新</string>
    <string name="update_latter">稍后更新</string>
    <string name="update_content_title">更新内容</string>
    <string name="find_new_version">发现新版本</string>
    <string name="def_update_content">1.修复了已知BUG\n2.优化了一些体验；\n3.新增了功能</string>
    <string name="finish_inv_confirm">盘点任务已完成！</string>
    <string name="sync_data_confirm">同步数据已完成！</string>
    <string name="sync_data_fail">同步数据失败！</string>
    <string name="finish_inv_fail">盘点任务失败！</string>
    <string name="scan_all_confirm">该位置盘点已完成！</string>
    <string name="choose_date">选择日期</string>
    <string name="asset_store_location">资产存放位置</string>
    <string name="synchronizing">正在同步中...</string>
    <string name="assets_count">资产数量</string>
    <string name="found_inv_task">创建盘点任务</string>
    <string name="rfid_connect">RFID设备连接中...</string>
    <string name="rfid_connect_fail">RFID连接失败</string>
    <string name="zero_str">查找到资产数量%1$d个</string>
    <string name="power_setting">功率设置</string>
    <string name="sound_setting">声音设置</string>
    <string name="function_setting">功能设置</string>
    <string name="about_handheld_machine">关于手持机</string>
    <string name="corporation_name">上海一芯智能科技</string>
    <string name="finish_time_alert">结束时间不能早于创建时间</string>
    <string name="time_too_earl">时间不能早于当天</string>
    <string name="handler">处\u0020\u0020理\u0020\u0020人</string>
    <string name="handle_method">处理方式</string>
    <string name="handle_date">处理时间</string>
    <string name="handle_content">处理内容</string>
    <string name="ast_repair_str">资产维修中</string>
    <string name="ast_borrow_str">资产外借中</string>
    <string name="user_out_str">人员外出中</string>
    <string name="ast_transfer_str">资产转移了</string>
    <string name="ast_lost_str">资产已丢失</string>
</resources>