<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:id="@+id/res_layout"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:text="@string/requisition_name"
            android:id="@+id/tv_res_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/theme"
            android:textSize="16sp"/>
        <TextView
            android:text="@string/requisition_user"
            android:id="@+id/tv_res_user"
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/theme"
            android:textSize="16sp"/>

        <TextView
            android:text="@string/requisition_creator"
            android:id="@+id/tv_res_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textColor="@color/theme"
            android:textSize="16sp"/>
        <TextView
            android:text="@string/requisition_create_time"
            android:id="@+id/tv_create_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/theme"
            android:layout_marginTop="7dp"
            android:textSize="16sp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_status"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:textColor="@color/un_checked"
        android:textSize="18sp"
        android:text="@string/inprogress"
        android:gravity="center"/>

</LinearLayout>