<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ast_name"
            android:textColor="@color/theme"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_ast_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_info"
            android:textColor="@color/theme"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ast_code"
            android:textColor="@color/theme"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_ast_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_info"
            android:textColor="@color/theme"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_SearchTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/current_search_tag"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/pb_Search"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:max="50"
        android:padding="10dp"
        android:progressDrawable="@drawable/location_progress" />

    <TextView
        android:id="@+id/search_tag"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/start_search"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>