<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_title" />

    <TextView
        android:id="@+id/tv_res_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/requisition_user"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_res_assets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/request_assets"
        android:textColor="@color/theme"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/used_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/used_assets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/has_used_assets"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/used_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/samll_button_background"
            android:padding="5dp"
            android:text="@string/asset_detail"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_asset_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/asset_id"
            android:lines="1"
            android:singleLine="true"
            android:textColorHint="@color/person" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/samll_button_background"
            android:padding="5dp"
            android:text="@string/query_asset"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/asset_list_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/search_asset_details"
        android:textColor="@color/theme"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/req_recycleview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp" />

        <include layout="@layout/error_page" />

        <include layout="@layout/empty_page" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_finish"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="60dp"
            android:scaleType="center"
            android:src="@drawable/finish_requisition"
            android:visibility="gone"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="mini"
            app:rippleColor="#ec8eae" />

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_start_or_stop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/start_scan"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/submit_data"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>