<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_5"
    android:background="@color/white"
    android:paddingStart="@dimen/dp_15"
    android:paddingTop="@dimen/dp_10"
    android:paddingEnd="@dimen/dp_15"
    android:paddingBottom="@dimen/dp_12">

    <View
        android:id="@+id/head_rec"
        android:layout_width="@dimen/dp_2"
        android:layout_height="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@color/search_background" />

    <TextView
        android:id="@+id/tv_num_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_toEndOf="@+id/head_rec"
        android:text="@string/assets_id"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_asset_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_toEndOf="@+id/tv_num_name"
        android:text="@string/no_info"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_inv_status"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_18"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_background"
        android:gravity="center"
        android:text="@string/ast_not_inved"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_num_name"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_toEndOf="@+id/head_rec"
        android:text="@string/assets_name"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_asset_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_num_name"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_toEndOf="@+id/tv_num_name"
        android:text="@string/no_info"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_toEndOf="@+id/head_rec"
        android:text="@string/store_location"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_asset_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_toEndOf="@+id/tv_num_name"
        android:text="@string/no_info"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/sp_13" />
</RelativeLayout>